Add add-opens only to maven surefire plugin